--- a/examples/rpl-udp/Makefile
+++ b/examples/rpl-udp/Makefile
@@ -1,7 +1,8 @@
 CONTIKI_PROJECT = udp-client udp-server
 all: $(CONTIKI_PROJECT)
 
-MAKE_ROUTING = MAKE_ROUTING_RPL_CLASSIC
+# MAKE_ROUTING = MAKE_ROUTING_RPL_CLASSIC
+RPL_CONF_OF_OCP = 0
 
 CONTIKI=../..
 include $(CONTIKI)/Makefile.include
